# studyNoteByCLang

./: CMakeLists.txt  README.md  array.c  define.c  function.c  main.c  pointer.c  struct.c  test_int.c
